--- a/src/components/Navibar/Homepage.css
+++ b/src/components/Navibar/Homepage.css
@@ -1,8 +1,18 @@
 .homepage{
   background-color: #1D1D1D;
   position: absolute;
-  top: 170px;
+  top: 70px;
   right: 0;
   bottom: 0;
   left: 0;
+
+
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  text-align: center; 
+  color:#E50914;
+}
+.h2{
+  color:#E50914;
 }
