--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -4,3 +4,68 @@
   margin: 10px;
   width:10%;
 }
+
+.movieCard:hover{
+  opacity: 0.3;
+}
+
+.container{
+  position: relative;
+  width: 50%;
+}
+
+.container:hover .image {
+  opacity: 0.3;
+}
+
+.container:hover .score {
+  opacity: 1;
+}
+
+
+.score {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  color:honeydew;
+}
+
+.container:hover .favoriteOff  {
+  opacity: 1;
+}
+
+.container:hover .favoriteOn  {
+  opacity: 1;
+}
+
+.favoriteOff {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 0%;
+  left: 200%;
+  transform: translate(-50%, 50%);
+  -ms-transform: translate(-50%, 50%);
+  text-align: center;
+  background-color:white;
+  color:black
+
+}
+
+.favoriteOn {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 0%;
+  left: 200%;
+  transform: translate(-50%, 50%);
+  -ms-transform: translate(-50%, 50%);
+  text-align: center;
+  background-color: yellow;
+  color:black
+}
